# compile

./: .gitmodules  CMakeLists.txt  newclass.bat
include/compile/: CompiledFunction.h  Compiler.h  Context.h  FunctionSpecializer.h  Module.h  Scope.h  Symbol.h  SymbolTable.h  TemplateFunction.h  TemplateType.h  TypeArgument.h  TypeSpecializer.h  TypeSpecializer.hpp  types.h
include/compile/ast/: CompileHandler.h  Validator.h
include/compile/interfaces/: IArrayTypeFactory.h  IModuleFactory.h  IModuleResolver.h  IModuleSource.h
include/compile/types/: BuiltinArray.h
src/: CompiledFunction.cpp  Compiler.cpp  Context.cpp  FunctionSpecializer.cpp  Module.cpp  Scope.cpp  Symbol.cpp  SymbolTable.cpp  TemplateFunction.cpp  TemplateType.cpp  TypeArgument.cpp  TypeSpecializer.cpp
src/ast/: CompileHandler.cpp  Validator.cpp
src/ast/compile/: CompileArrayLiteralNode.cpp  CompileArrayTypeNode.cpp  CompileArrowFunctionExpressionNode.cpp  CompileAwaitExpressionNode.cpp  CompileBinaryExpressionNode.cpp  CompileBooleanLiteralNode.cpp  CompileBreakStatementNode.cpp  CompileCallExpressionNode.cpp  CompileCastExpressionNode.cpp  CompileCatchStatementNode.cpp  CompileClassConstructorNode.cpp  CompileClassDestructorNode.cpp  CompileClassMethodNode.cpp  CompileClassNode.cpp  CompileClassOperatorMethodNode.cpp  CompileClassPropertyGetterNode.cpp  CompileClassPropertyNode.cpp  (+52 more)
src/interfaces/: IArrayTypeFactory.cpp  IModuleFactory.cpp  IModuleResolver.cpp  IModuleSource.cpp
src/types/: BuiltinArray.cpp
test/: CMakeLists.txt  Common.cpp  Common.h  Playground.cpp
